--- a/mydailyhadith-frontend/src/styling/App.css
+++ b/mydailyhadith-frontend/src/styling/App.css
@@ -222,3 +222,18 @@ p {
   border-radius: 4px;
   cursor: pointer;
 }
+
+@media screen and (max-width: 768px) {
+  .subscription {
+    margin-top: 30px; /* Add more space for mobile view */
+  }
+
+  .email-input {
+    width: 100%; /* Make the input box take full width on mobile */
+    margin-bottom: 10px; /* Add spacing below the input */
+  }
+
+  .subscribe-button {
+    width: 100%; /* Make the button take full width on mobile */
+  }
+}
